Actions
Bug #22079
closedFloat#ceil gives incorrect result
Bug #22079:
Float#ceil gives incorrect result
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.3.7 (2025-01-15 revision be31f993d7) [x86_64-linux]
Backport:
Description
Updated by nobu (Nobuyoshi Nakada) 3 months ago
- Backport changed from 3.3: UNKNOWN, 3.4: UNKNOWN, 4.0: UNKNOWN to 3.3: REQUIRED, 3.4: REQUIRED, 4.0: REQUIRED
Updated by nobu (Nobuyoshi Nakada) 3 months ago
- Status changed from Open to Closed
Applied in changeset git|09dacb9c3d61264f3eb3731e2c65feb869130228.
[Bug #22079] Fix Float#ceil and Float#floor edge cases
Updated by luke-gru (Luke Gruber) 3 months ago
- Backport changed from 3.3: REQUIRED, 3.4: REQUIRED, 4.0: REQUIRED to 3.3: REQUIRED, 3.4: REQUIRED, 4.0: DONE
Updated by nagachika (Tomoyuki Chikanaga) 3 months ago
- Backport changed from 3.3: REQUIRED, 3.4: REQUIRED, 4.0: DONE to 3.3: REQUIRED, 3.4: DONE, 4.0: DONE
ruby_3_4 bc5e9ac4cf2f416435c8aac778ba272ac0205d5a merged revision(s) 97ec327efc74b0df42421fa4344d1f05452d0623, 09dacb9c3d61264f3eb3731e2c65feb869130228.
Actions