Fix `Float#ceil` and `Float#floor` edge cases

Fixes [Bug #22079] (Backport)